[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlcbase"
version = "1.2.0a3"
authors = [
    {name = "Weiming Chen", email = "wm_chen@yeah.net"},
    {name = "Yuanshuang Sun", email = "sunsun5544@126.com"}
]
description = "The base module of all MuLingCloud modules and applications."
readme = {"file" = "README.md", content-type = "text/markdown"}
requires-python = ">=3.7"
dependencies = [
    "colorama",
    "loguru",
    "pytz",
    "prettytable",
    "pyyaml",
    "rsa",
    "pycryptodome",
    "requests",
    "paramiko",
    "PyMySQL",
    "pyotp",
    "qrcode[pil]",
    "opencv-python",
    "matplotlib",
]
license = { file = "LICENSE" }
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    
    "Programming Language :: Python"
]

[project.urls]
Homepage = "https://www.mulingcloud.com"
Repository = "https://github.com/mulingcloud/mlcbase.git"