[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlcbase"
version = "1.2.11"
authors = [
    {name = "Weiming Chen", email = "wmchen@mulingcloud.com"},
    {name = "Yuanshuang Sun", email = "sunsun5544@126.com"}
]
description = "The base module of all MuLingCloud modules and applications."
readme = {"file" = "README.md", content-type = "text/markdown"}
requires-python = ">=3.7"
dependencies = [
    "packaging",
    "rich",
    "colorama",
    "loguru",
    "pytz",
    "pyyaml",
    "toml",
    "pycryptodome",
    "psutil",
    "requests",
    "paramiko",
    "PyMySQL",
    "pyotp",
    "qrcode[pil]",
    "opencv-python",
    "matplotlib",
    "ipython"
]
license = { file = "LICENSE" }
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    
    "Programming Language :: Python"
]

[project.urls]
Homepage = "https://www.mulingcloud.com"
Repository = "https://github.com/mulingcloud/mlcbase.git"